# lr2-parallel-text-processing

./: BlockingQueue.hpp  CMakeLists.txt  main.cpp  test_file_1.txt  test_file_2.txt  test_file_3.txt  test_file_4.txt  test_file_5.txt
src/: file_utils.cpp  file_utils.h  main.cpp  result.h  task.h
